@@ -1,16 +1,15 @@
 package stream;
 
 import java.util.List;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-public class SupplierExemple{
+public class SupplierExemple {
     public static void main(String[] args) {
-        Supplier<String> saudacao = ()-> "Hello world!";
 
-        List<String> listaSaudacoes = Stream.generate(saudacao).limit(5).collect(Collectors.toList());
+        List<String> listaSaudacoes = Stream.generate(() -> "Hello world")
+                .limit(5)
+                .toList();
 
-        listaSaudacoes.forEach(s->System.out.println(s));
+        listaSaudacoes.forEach(System.out::println);
     }
 }
